# pimpl_placement_new

./: .gitignore  LICENSE
1/: ab.cpp  ab.h  main.cpp
1_autogen_header_placement_storage/: CMakeLists.txt  ab.cpp  ab.h  aligned_storer.h  gen_aligninfo.cpp
2/: ab.cpp  ab.h  aligned_storer.h
2_unique/: ab.cpp  ab.h  main.cpp
3/: CMakeLists.txt  ab.cpp  ab.h
3_template/: ab.cpp  ab.h  aligned_storer.h  main.cpp
4_autogen_header_placement_storage/: CMakeLists.txt  ab.cpp  ab.h  ab_impl_aligninfo.h
